# AIPmb

./: .dockerignore  .gitignore  =0.5.0  Dockerfile  build_manage.sh  create_cmb_products.py  deploy.py  generate_pptx.py  merge_statements.py  pyproject.toml  run_api.py  零售业务知识库建设计划.md
.lingma/: memory_inventory.txt
aipmb-ppt/: index.html
aipmb_app/: README.md  pubspec.yaml
aipmb_app/android/: gradle.properties
aipmb_app/lib/: main.dart
aipmb_app/test/: widget_test.dart
aipmb_manage/: README.md  pubspec.yaml
aipmb_manage/lib/: main.dart
aipmb_manage/test/: widget_test.dart
aipmb_manage/web/: index.html  manifest.json
coredatas/: 个人保险产品.xlsx  个人基金产品.xlsx  个人外汇产品.xlsx  个人存款产品.xlsx  个人理财产品.xlsx  个人贷款产品.xlsx  个人黄金产品.xlsx  信用卡账单合并明细表.xlsx  养老金信息表.xlsx  客户账户信息表.xlsx  持有理财信息表.xlsx  缴费记录.xlsx  银行交易流水汇总明细表.xlsx
data/: 微信支付账单流水文件(20260101-20260610)_20260610132549 (王小美).xlsx  招商银行交易流水汇总明细表-bak.xlsx  招商银行交易流水汇总明细表.xlsx  持有理财信息表.xlsx  持有贷款信息表.xlsx  持有贷款信息表_bak.xlsx
docs/: AI手机银行暨手机银行11.0建设方案汇报.pptx
docs/specs/: AI-Manage运营管理应用_task-08b.md  Agent架构重构为Skill架构_task-9c5.md  ai-mobile-banking-app.md  pptx-python-generation_task-9c5.md  rag-product-knowledge-plan.md  risk-assessment-plan.md  skill-api-refactor_task-0bb.md  缴费记录查询提醒Skill_task-be3.md
landing/: index.html  ios.html
pmb/: __main__.py  cli.py
pmb/agents/: __init__.py  base.py  consumption_analyst.py  financial_planner.py  general_assistant.py  income_expense_analyst.py  (+4 more)
rag_docs/: AI对话约束规则.md  INDEX.md  README.md  文档来源记录.md  来源引用审查报告.md
skill-sample/: SKILL.md
tests/: user_isolation_test.py
(+466 files in other folders)
